GMM_Main/src/objects/Intgr_MuleSoft__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>contenttype__c</fullName>
        <label>contenttype</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>endPointuri__c</fullName>
        <label>endPointuri</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>httpMethodName__c</fullName>
        <label>httpMethodName</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sandbox__c</fullName>
        <label>sandbox</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>uName__c</fullName>
        <label>uName</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>upassword__c</fullName>
        <label>upassword</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Intgr_MuleSoft</label>
</CustomObject>